# backend_amazon-ads-campaigns

./: .env.example  .gitignore  .railway-rebuild  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  start.sh
apps/campaigns/: __init__.py  admin.py  apps.py
apps/campaigns/api/: __init__.py  filters.py  serializers.py  urls.py  views.py
apps/campaigns/domain/: __init__.py  exceptions.py  models.py  services.py
apps/campaigns/migrations/: 0001_initial.py
apps/campaigns/tasks/: __init__.py  campaign_tasks.py
apps/core/: __init__.py  apps.py  cors_mixin.py  middleware.py  pagination.py  urls.py  views.py
apps/core/exceptions/: __init__.py  handlers.py
apps/core/mixins/: __init__.py  timestamp.py
config/: __init__.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  testing.py
docker/: Dockerfile.dev
integrations/amazon_ads/: __init__.py  auth.py  client.py  exceptions.py  schemas.py
requirements/: base.txt  development.txt  production.txt
tests/: conftest.py
tests/integration/campaigns/: test_api.py
tests/unit/campaigns/: test_services.py
tests/unit/core/: test_cors_mixin.py  test_middleware.py
